File renames and bug fixes

--- a/custom_components/ottoscript/app/config.yaml.sample
+++ b/custom_components/ottoscript/app/config.yaml.sample
@@ -1,5 +1,5 @@
 ottopyscript:
-  - directory: /config/user_scripts/
+  - directory: /config/ottoscripts/
     verbose: 0 # setting this to 1 will send more data to the logs for debugging
     area_shortcuts: # each key is treated like an area and expanded to include all the areas below it.
       basement:
